[project]
name = "pytaskmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altgraph==0.17.4",
    "debugpy==1.8.12",
    "keyboard==0.13.5",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "narwhals==1.30.0",
    "numpy==2.2.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pefile==2023.2.7",
    "plotly==6.0.0",
    "pygments==2.19.1",
    "pyinstaller==6.11.1",
    "pyinstaller-hooks-contrib==2025.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pywin32-ctypes==0.2.3",
    "rich==13.9.4",
    "setuptools==75.8.0",
    "six==1.17.0",
    "tzdata==2025.1",
    "uv==0.6.7",
]
